add homework 3 template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,3 +313,21 @@ add_plugin(synth
         ${gui_source}
         ${dsp_source}
         ${synth})
+
+# homework 3 plugin template
+set(amp_model_source ${CMAKE_CURRENT_SOURCE_DIR}/projects/AmpModel)
+
+add_plugin(amp_model
+    VERSION 0.1.0
+    PLUGIN_NAME "Amp Model"
+    PROD_NAME AmpModel
+    PROD_CODE AmpM
+    SYNTH FALSE
+    SOURCES
+        ${amp_model_source}/PluginEditor.cpp
+        ${amp_model_source}/PluginProcessor.cpp
+        ${amp_model_source}/AmpGruParameters.cpp
+    INCLUDE_DIRS
+        ${gui_source}
+        ${dsp_source}
+        ${amp_model_source})
